# ao-bergamo

./: .gitignore  .kateproject  Makefile  README.md  calibration_flat.mat  calibration_forward.mat  image_process.cu  mask.mat  notes.txt  shwfs
AlpaoLib/: BAX390
data/: DMcommand_1030.mat  DMcommand_1225.mat  DMcommand_950.mat  calibration_1010nm_4nmAu_1_geneopt.mat  calibration_1020nm_1_geneopt.mat  calibration_1020nm_2_geneopt.mat  calibration_1030geneopt.mat  calibration_1225geneopt.mat  calibration_1225geneopt_2.mat  calibration_950geneopt.mat  calibration_950nm_1_geneopt.mat  calibration_950nm_2_geneopt.mat  calibration_960nm_20211114_geneopt.mat  calibration_960nm_300um_1_geneopt.mat  calibration_960nm_500um_1_geneopt.mat  calibration_960nm_PSbeads_1_geneopt.mat  calibration_960nm_PSbeads_long4_geneopt.mat  calibration_960nm_Retrobeads_1_geneopt.mat  calibration_fixed1040geneopt.mat  calibration_flat.mat  calibration_forward.mat  calibration_geneopt.mat  calibration_zernike.mat  dm_zernike_ctrl.mat
doc/: Makefile  SOP.odt  SOP_calibration.odt  optical_schematic_key.txt  progress_report.tex
gl/: fragment.glsl  fragment_flat.glsl  text.f.glsl  text.v.glsl  vertex.glsl  vertex_flat.glsl
include/: acedev5.h  asdkDM.h  asdkErrNo.h  asdkMultiDM.h  asdkSwig.i  asdkType.h  asdkWrapper.h  gettime.h  globals.h  serialize.h  text_helper.h
matlab/: Cforward_fit.m  Cgeneopt_analyze.m  Cgeneopt_svd.m  Czernike.m  DM_control_gui.m  DM_control_gui_observe.m  DM_control_minimal.m  clamp.m  (+36 more)
torch_dmctrl/src/: .CMakeLists.txt.kate-swp  CMakeLists.txt  main.cpp  sock.cpp
(+148 files in other folders)
